--- a/bukkit/bukkit-npc/pom.xml
+++ b/bukkit/bukkit-npc/pom.xml
@@ -113,11 +113,23 @@
     </build>
 
     <repositories>
-        <!-- ProtocolLib Repository -->
+        <!-- Imanity Repository -->
         <repository>
-            <id>dmulloy2-repo</id>
-            <url>https://repo.dmulloy2.net/nexus/repository/public/</url>
+            <id>imanity-libraries</id>
+            <url>https://maven.imanity.dev/repository/imanity-libraries</url>
         </repository>
+
+        <!-- Jit Pack Repository -->
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
+
+        <!-- ProtocolLib Repository --> <!-- The Web is down for some reason -->
+<!--        <repository>-->
+<!--            <id>dmulloy2-repo</id>-->
+<!--            <url>https://repo.dmulloy2.net/nexus/repository/public/</url>-->
+<!--        </repository>-->
     </repositories>
 
     <dependencies>
@@ -129,9 +141,9 @@
         </dependency>
         <!-- This should be removed soon while completed... -->
         <dependency>
-            <groupId>com.comphenix.protocol</groupId>
+            <groupId>com.github.dmulloy2</groupId>
             <artifactId>ProtocolLib</artifactId>
-            <version>4.5.0</version>
+            <version>4.5.1</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -141,9 +153,9 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>org.github.paperspigot</groupId>
-            <artifactId>paperspigot</artifactId>
-            <version>1.8.8-R0.1-SNAPSHOT</version>
+            <groupId>org.imanity.paperspigot</groupId>
+            <artifactId>paper1.8.8</artifactId>
+            <version>1.8.8</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
