--- a/core/core-services/pom.xml
+++ b/core/core-services/pom.xml
@@ -98,6 +98,13 @@
         </repository>
     </distributionManagement>
 
+    <repositories>
+        <repository>
+            <id>imanity-libraries</id>
+            <url>https://maven.imanity.dev/repository/imanity-libraries/</url>
+        </repository>
+    </repositories>
+
     <dependencies>
         <dependency>
             <groupId>org.apache.commons</groupId>
