--- a/bukkit/bukkit-common/pom.xml
+++ b/bukkit/bukkit-common/pom.xml
@@ -38,6 +38,8 @@
         <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <timings.version>0.0.1-SNAPSHOT</timings.version>
+        <caffeine.version>2.9.0</caffeine.version>
+        <asm.version>9.1</asm.version>
     </properties>
 
     <build>
@@ -250,7 +252,7 @@
         <dependency>
             <groupId>com.github.ben-manes.caffeine</groupId>
             <artifactId>caffeine</artifactId>
-            <version>2.8.5</version>
+            <version>${caffeine.version}</version>
             <scope>provided</scope>
         </dependency>
 
@@ -288,14 +290,14 @@
         <dependency>
             <groupId>org.ow2.asm</groupId>
             <artifactId>asm</artifactId>
-            <version>7.1</version>
+            <version>${asm.version}</version>
             <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>org.ow2.asm</groupId>
             <artifactId>asm-commons</artifactId>
-            <version>7.1</version>
+            <version>${asm.version}</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
