--- a/core/core-misc/pom.xml
+++ b/core/core-misc/pom.xml
@@ -36,6 +36,7 @@
         <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <jackson.version>2.11.2</jackson.version>
+        <caffeine.version>2.9.0</caffeine.version>
     </properties>
 
     <build>
@@ -203,7 +204,7 @@
         <dependency>
             <groupId>com.github.ben-manes.caffeine</groupId>
             <artifactId>caffeine</artifactId>
-            <version>2.8.5</version>
+            <version>${caffeine.version}</version>
             <scope>provided</scope>
         </dependency>
 
