--- a/http-server/pom.xml
+++ b/http-server/pom.xml
@@ -47,7 +47,7 @@
         <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <jackson.version>2.11.2</jackson.version>
-        <netty.version>4.1.42.Final</netty.version>
+        <netty.version>4.1.59.Final</netty.version>
     </properties>
 
     <build>
@@ -96,6 +96,12 @@
                         </goals>
                         <configuration>
                             <createDependencyReducedPom>false</createDependencyReducedPom>
+                            <relocations>
+                                <relocation>
+                                    <pattern>io.netty</pattern>
+                                    <shadedPattern>org.imanity.framework.libs.netty</shadedPattern>
+                                </relocation>
+                            </relocations>
                         </configuration>
                     </execution>
                 </executions>
