--- a/core/core-mongo/pom.xml
+++ b/core/core-mongo/pom.xml
@@ -27,7 +27,7 @@
     <parent>
         <artifactId>core</artifactId>
         <groupId>org.imanity.framework</groupId>
-        <version>0.2-SNAPSHOT</version>
+        <version>0.3b1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
