--- a/discord/pom.xml
+++ b/discord/pom.xml
@@ -156,6 +156,11 @@
             <id>imanity-repo</id>
             <url>https://maven.imanity.dev/repository/imanity-libraries/</url>
         </repository>
+        <repository>
+            <id>dv8tion</id>
+            <name>m2-dv8tion</name>
+            <url>https://m2.dv8tion.net/releases</url>
+        </repository>
     </repositories>
 
     <dependencies>
@@ -192,7 +197,7 @@
         <dependency>
             <groupId>net.dv8tion</groupId>
             <artifactId>JDA</artifactId>
-            <version>4.2.0_168</version>
+            <version>4.2.1_253</version>
             <exclusions>
                 <exclusion>
                     <groupId>club.minnced</groupId>
