Updated Bungee to latest PluginManager

--- a/bungee/src/main/resources/bungee.yml
+++ b/bungee/src/main/resources/bungee.yml
@@ -1,4 +1,4 @@
 name: "framework"
 version: ${project.version}
-main: org.imanity.framework.bungee.plugin.StandalonePlugin
+main: org.imanity.framework.bungee.plugin.ImanityStandalonePlugin
 author: LeeGod
